--- a/pages/admin/admin-games-panel.html
+++ b/pages/admin/admin-games-panel.html
@@ -22,7 +22,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Game Store TE ESTOY CAMBIANDOO</a>
+          <a class="navbar-brand" href="#">Game Store</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -52,7 +52,7 @@
 				<div class="container games-panel-container">
 					<div class="row">
 						<div class="col col-2 admin-options-col bg-danger">
-							<h1>Hola</h1>
+							<h1>HOLA ESTO ES UN CAMBIO</h1>
 						</div>
 						<div class="col col-10 games-list-col bg-success">
 							<h1>Hola</h1>
